# nextcloud-tag-sync

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  shell.nix
examples/: build_local_repo.rs  build_remote_repo.rs  create_local_tag.rs  create_remote_tag.rs  db.rs  fetch_local_tags.rs  fetch_remote_tags.rs  fetch_tags.rs  figment.rs  inotify_watch.rs  read_tag.rs  tag_remote_file.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_target_1.rs
home-manager-module/: default.nix
manual-testing/: config.toml  create-root-user.sh  generate_dummy_file_tags.sh  generate_dummy_file_tree.sh  nc_tag.sh  start-test-environment.fish  sync-dir.sh
src/: commands.rs  config.rs  deserializers.rs  file_system.rs  helper.rs  lib.rs  local_fs.rs  main.rs  map.rs  remote_fs.rs  requests.rs  tag_repository.rs  updater.rs
src/local_fs/: fs.rs  fs_walker.rs
src/remote_fs/: common.rs  fs.rs  fs_walker.rs  requests.rs
src/remote_fs/requests/: common.rs  create_tag.rs  get_file_id.rs  list_files_with_tag.rs  list_tags.rs  tag_file.rs  untag_file.rs
src/requests/: common.rs  create_tag.rs  list_files_with_tag.rs  list_tags.rs  tag_file.rs
templates/: create_tag.json  get_file_id.xml  list_files_with_tag.xml  load_tags.xml
test_data/: airplanes.xml  all_tags.xml  file_id.xml
tests/: basic.rs  common.rs
tests/common/: create_dir.rs  get_file_tags.rs  mod.rs  upload_file.rs
tests/snapshots/: basic__handle_weird_filenames.snap  basic__impl.snap  basic__run_followup_sync_bidirectional.snap  basic__run_initial_sync_bidirectional.snap  basic__run_initial_sync_bidirectional_db.json.snap  basic__run_initial_sync_to_local.snap  basic__run_initial_sync_to_remote.snap  basic__sync_with_unmapped_files.snap  basic__tagged_file_not_downloaded.snap  basic__tagged_file_not_uploaded.snap
