[package]
name = "nextcloud-tag-sync"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fuzzing = []

[dependencies]
askama = "0.12.0"
atomic-write-file = "0.2.1"
atty = "0.2.14"
bimap = "0.6.3"
figment = { version = "0.10.8", features = ["env", "toml"] }
futures = "0.3.27"
itertools = "0.14.0"
notify = "8.0.0"
percent-encoding = "2.3.1"
quick-xml = { version = "0.37.2", features = ["serialize", "async-tokio"] }
reqwest = "0.12.3"
serde = { version = "1.0.158", features = ["derive"] }
serde-query = "0.2.0"
serde_json = "1.0.128"
serde_path_to_error = "0.1.11"
snafu = { version = "0.8.2", features = ["futures"] }
termtree = "0.5.1"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
walkdir = "2.3.3"
xattr = "1.0.0"

[dev-dependencies]
insta = { version = "1.40.0", features = ["redactions", "yaml"] }
tempfile = "3.12.0"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
testcontainers = "0.23.3"
# httptest?
