[package]
name = "nextcloud-tag-sync"
version = "0.9.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fuzzing = []

[dependencies]
askama = "0.15.4"
atomic-write-file = "0.3.0"
bimap = "0.6.3"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = "0.3.32"
itertools = "0.14.0"
percent-encoding = "2.3.2"
quick-xml = { version = "0.39.2", features = ["serialize", "async-tokio"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-query = "0.2.0"
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
snafu = { version = "0.8.9", features = ["futures"] }
termtree = "1.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
walkdir = "2.5.0"
xattr = "1.6.1"

[dev-dependencies]
insta = { version = "1.46.3", features = ["redactions", "yaml"] }
tempfile = "3.25.0"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }
testcontainers = "0.27.0"
